<resources>
    <string name="app_name">Git Hub User</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="myname">Anna Karenina</string>
    <string name="followers">Followers</string>
    <string name="username">itsannazzle</string>
    <string name="following">Following</string>
    <string name="explore">Explore</string>
    <string name="pull_req">Pull req</string>
    <string name="market">Market</string>
    <string name="title_repo">Repository</string>
    <string name="description">Description</string>
    <string name="prog_lang">kotlin</string>
    <string name="stars">Stars</string>
    <string name="branch">Branch</string>
    <string name="follow">Follow</string>
    <string name="language_setting">Language setting</string>
    <string name="repositories">Popular repositories</string>
    <string name="search_result">Search result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchhint">Search user</string>
    <string name="popular_user" translatable="false">Popular user</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="project" translatable="false">Project</string>
    <string name="text_package" translatable="false">Package</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="key_language" translatable="false">key_lang</string>
    <string name="key_switch" translatable="false">key_switch</string>
    <string name="subtitle">Millions of developers and companies build, ship, and maintain their software on GitHub—the largest and most advanced development platform in the world.</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="landing_title">Where the world build software</string>
    <string name="content_desc_gitglobe">Globe picture</string>
    <string name="enter_username">Username</string>
    <string name="sign_in_to_github">Sign in to GitHub</string>
    <string name="password">Password</string>
    <string name="your_favorite_user">Your favorite user</string>
</resources>