<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".welcome.LandingScreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/landing_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subtitle"
        style="@style/body_copy"
        android:letterSpacing="0.1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/subtitle"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <FrameLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="631dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/content_desc_gitglobe"
            android:scaleType="matrix"
            android:src="@drawable/globe" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            style="@style/secondaryButton"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/primaryButton"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:text="@string/sign_up" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>