<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:id="@+id/user_imager"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/aku"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:paddingTop="16dp"
        android:id="@+id/name"
        style="@style/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/myname"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/user_imager"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textColor="@color/icon_grey"
        app:layout_constraintBaseline_toBaselineOf="@id/name"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/follwers"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/followers"
        android:textColor="@color/icon_grey"
        app:layout_constraintStart_toEndOf="@+id/user_imager"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/following"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/following"
        android:textColor="@color/icon_grey"
        app:layout_constraintStart_toEndOf="@+id/follwers"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/dashboard_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:tabBackground="@color/white"
        app:tabIndicatorHeight="2dp"
        app:tabIndicatorColor="@color/green"
        app:tabSelectedTextColor="@color/green"
        app:tabTextColor="@color/grey"
        app:tabIconTint="@color/ic_tab_color"
        app:tabTextAppearance="@style/CustomTabStyle"
        app:tabInlineLabel="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_imager">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager2"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:layout_constraintTop_toBottomOf="@id/dashboard_tab"
        android:layout_marginTop="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>