<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.explore.DetailActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/aku"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/detail_name"
        style="@style/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/myname"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/detail_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_username"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/icon_grey"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/detail_name"
        app:layout_constraintStart_toEndOf="@+id/detail_name"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detail_btnfollow"
        style="@style/body_copy"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/follow"
        android:shadowRadius="0"
        android:textAllCaps="false"
        android:textColor="@color/git_blue"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_image"
        app:layout_constraintTop_toBottomOf="@+id/detail_name"
        app:strokeColor="@color/git_blue"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/detail_bio"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:layout_marginTop="16dp"
        android:maxLength="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image"/>

    <TextView
        android:id="@+id/detail_office"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:drawablePadding="4dp"
        android:maxLength="24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_bio"
        app:drawableStartCompat="@drawable/ic_baseline_apartment_24" />

    <TextView
        android:id="@+id/detail_location"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:layout_marginStart="4dp"
        android:maxLength="20"
        android:text="@string/follow"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintStart_toEndOf="@+id/detail_office"
        app:layout_constraintTop_toBottomOf="@+id/detail_bio" />

    <TextView
        android:id="@+id/detail_blog"
        style="@style/body_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:text="@string/follow"
        android:layout_marginTop="4dp"
        android:maxLength="24"
        app:drawableStartCompat="@drawable/ic_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_office" />


      <com.google.android.material.tabs.TabLayout
          android:id="@+id/tablayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/detail_blog"
          app:tabBackground="@color/white"
          app:tabIndicatorHeight="4dp"
          app:tabIndicatorColor="@color/black"
          app:tabTextColor="@color/git_blue" />

      <androidx.viewpager2.widget.ViewPager2
          android:id="@+id/viewpager2"
          android:layout_width="match_parent"
          android:layout_height="700dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tablayout" />


</androidx.constraintlayout.widget.ConstraintLayout>